fixed issue where errors that show up on mobile would appear on desktop version. now only appears on mobile.

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -600,7 +600,7 @@ h1 {
     text-align: center;
   }
 
-  .search_container_button {
+  .search_container {
     visibility: hidden;
     position: absolute;
   }
